# Sapphire-Engine

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LICENSE  LionAnimation.anim  Makefile  Projects.sp  README.md  build.ninja  cmake_install.cmake  hello.txt  imgui.ini
.cmake/api/v1/reply/: cache-v2-b53e1e66eec847b06144.json  cmakeFiles-v1-194044267052f4b3bc16.json  cmakeFiles-v1-4b2d54fa02cdd98a8337.json  codemodel-v2-27a4c62f72292b020711.json  index-2023-08-09T15-10-02-0893.json  index-2023-08-09T22-22-28-0419.json  target-Sapphire-Engine-14f3547131b74a7a9018.json  toolchains-v1-f4f6f13c272c74bb1944.json
Assets/: Preferences.json
Layout/: NewIni.ini  Test.ini
Shaders/: Circle.glsl  Grid.glsl  Line.glsl  Texture.glsl
Themes/: dark.json  light.json  purple.json  red.json
include/: Profiler.h
include/Imgui/: imgui_markdown.h  implot.cpp
src/: Projects.sp  Utilities.hpp  imgui.ini  main.cpp  pch.h
src/Application/: Application.cpp  Application.h
src/Editor/: DebugDraw.cpp  DebugDraw.h  Editor.cpp  Editor.h  ImGuiWindows.cpp  ImGuiWindows.h  StartUp.hpp  Variables.cpp  Variables.h
src/Editor/UI/: DragAndDrop.hpp  GamePreview.cpp  GamePreview.h  ImGuiWindow.cpp  ImGuiWindow.h  Menus.cpp  Menus.h  ProjectManager.cpp  ProjectManager.h  Viewport.cpp  Viewport.h
src/Editor/UI/FileExplorer/: File.cpp  File.h  FileExplorer.cpp  FileExplorer.h
src/Editor/Views/: PlayMode.cpp  PlayMode.h  SceneEditor.h
src/Engine/: Engine.cpp  Engine.h  Events.cpp  Events.h  Scenes.cpp  Scenes.h  StartUp.hpp  Views.cpp  Views.h
src/Engine/Graphics/: Animation.cpp  Animation.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h  Shapes.cpp  Shapes.h
src/Engine/Graphics/Renderer/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp
src/Engine/Objects/: Objects.cpp  Objects.h  Transform.cpp  Transform.h
src/Engine/Scripting/: Components.cpp  Components.h  LuaUtilities.cpp  LuaUtilities.h  Scripting.cpp  Scripting.h
src/Engine/Views/: PlayMode.cpp  PlayMode.h  SceneEditor.cpp  SceneEditor.h
src/Game/: Game.cpp  Game.h
src/Graphics/: Gizmos.cpp  Gizmos.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h  ShaderFunc.h  Shapes.cpp  Shapes.h
src/Graphics/Renderer/: FrameBuffer.cpp  IndexBuffer.h  Renderer.h  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Objects/: Objects.cpp  Objects.h  Transform.cpp  Transform.h
src/PhysicsEngine/: AABB.cpp  AABB.h  CollisionDetection.cpp  CollisionDetection.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h
src/RunTime/: RunTime.cpp  RunTime.h
src/Scripting/: Components.cpp  Components.h  LuaUtilities.cpp  LuaUtilities.h  Scripting.cpp  Scripting.h  Variables.cpp  Variables.h
src/UI/: DragAndDrop.hpp  ProjectManager.cpp  ProjectManager.h  Windows.cpp  Windows.h
src/UI/FileExplorer/: File.cpp  File.h  FileExplorer.cpp  FileExplorer.h
